--- a/injection_bak/Makefile
+++ b/injection_bak/Makefile
@@ -2,7 +2,7 @@ CFLAGS = -O3 -Wall -static -Wno-unknown-pragmas
 LDLIBS = -lorcon -lm -lrt
 CC = gcc
 
-ALL = random_packets
+ALL = random_packets random_packets_orig
 
 all: $(ALL)
 
@@ -10,5 +10,6 @@ clean:
 	rm -f *.o $(ALL)
 
 random_packets: random_packets.c util.o
+random_packets_orig: random_packets_orig.c util.o
 
 util.c: util.h
